@@ -657,6 +657,7 @@ interfaces_update(struct lldpd *cfg)
 	TAILQ_FOREACH(hardware, &cfg->g_hardware, h_entries) {
 		if (!hardware->h_flags) continue;
 		ifbsd_macphy(cfg, hardware);
+		interfaces_helper_promisc(cfg, hardware);
 	}
 
 	if (cfg->g_iface_event == NULL) {
