@@ -1,3 +1,8 @@
+lldpd (0.7.10)
+  * Features:
+    + Ability to set promiscuous mode to work around bugs of some
+      switches encapsulating LLDP frames inside 802.1Q frames.
+
 lldpd (0.7.9)
   * Changes:
     + Default location for chroot, socket and PID are now configurable
